--- a/site/static/sass/_breakpoints.sass
+++ b/site/static/sass/_breakpoints.sass
@@ -357,6 +357,8 @@
         display: block
         width: 100%
     .table
+      .td
+        @include flex-basis(auto)
       td
         span
           display: block
